--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -10,22 +10,32 @@
 		<h:form enctype="multipart/form-data">
 			<p:growl id="messages" showDetail="true" />
 
-			<video width="320" height="240" controls="true" src="">
-				<source src="#{uploadController.fileUrl}" />
-			</video>
-			
-			<p:fileUpload value="#{uploadController.file}" mode="simple" 
-				skinSimple="true"  />
-			<p:commandButton value="Submit" ajax="false"
-				actionListener="#{uploadController.upload}" disabled="false" />
-		
-		
- 
-   
+			<h:panelGroup layout="block"
+				rendered="#{not empty uploadController.fileUrl}">
+				<video class="video-js vjs-default-skin" data-setup="{}" width="768"
+					height="400" controls="true" autoplay="true" >
+					<source src="#{uploadController.fileUrl}" type="video/mp4" />
+				</video>
+			</h:panelGroup>
 
-
+			<div>
+				<p:fileUpload value="#{uploadController.file}" mode="advanced" auto="true"
+					fileUploadListener="#{uploadController.upload}" skinSimple="true"
+					update="@form" onstart="PF('statusDialog').show()"
+					oncomplete="PF('statusDialog').hide()" />
+			</div>
 
 		</h:form>
+
+		<p:ajaxStatus onstart="PF('statusDialog').show()"
+			onsuccess="PF('statusDialog').hide()" />
+
+		<p:dialog widgetVar="statusDialog" modal="true" draggable="false"
+			closable="false" resizable="false" showHeader="false">
+			<p:graphicImage name="/img/ajaxloadingbar.gif" />
+		</p:dialog>
+
+
 
 	</ui:define>
 </ui:composition>
