--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -6,7 +6,9 @@
 	xmlns:p="http://primefaces.org/ui"
 	template="/WEB-INF/templates/default.xhtml">
 	<ui:define name="content">
-
+		<h2>O Media Converter</h2>
+		<h3>Selecione um arquivo de vídeo que deseja converter para o
+			padrão web</h3>
 		<h:form enctype="multipart/form-data">
 			<p:growl id="messages" showDetail="true" />
 
