--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -14,15 +14,10 @@
 
 			<h:panelGroup layout="block"
 						  rendered="#{not empty uploadController.video.encodedUrl}">
-				<video  id="video" class="video-js vjs-default-skin" data-setup="{}" width="768"
+				<video  id="video" width="768"
 						height="425" controls="true" autoplay="true">
 					<source src="#{uploadController.video.encodedUrl}" type="video/mp4" />
 				</video>
-				<script>
-					var player = videojs('video', {}, function() {
-						this.play();
-					});
-				</script>
 			</h:panelGroup>
 
 			<div>
