--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -6,26 +6,34 @@
 				xmlns:p="http://primefaces.org/ui"
 				template="/WEB-INF/templates/default.xhtml">
 	<ui:define name="content">
-		<h2>O Media Converter</h2>
+		<h2>Media Converter</h2>
 		<h3>Selecione um arquivo de vídeo que deseja converter para o
 			padrão web</h3>
 		<h:form enctype="multipart/form-data">
 			<p:growl id="messages" showDetail="true" />
 
 			<h:panelGroup layout="block"
-						  rendered="#{not empty uploadController.video.encodedUrl}">
-				<video  id="video" width="768"
-						height="425" controls="true" autoplay="true">
-					<source src="#{uploadController.video.encodedUrl}" type="video/mp4" />
-				</video>
-			</h:panelGroup>
+						  rendered="#{not empty uploadController.video.outputs}">
+				<video id="video" class="video-js vjs-default-skin" width="768"
+						height="425" controls="true" autoplay="true" data-setup='{}'>
+				<ui:repeat var="output" value="#{uploadController.video.outputs}">
+					<source src="#{output.url}" type="#{output.contentType.value}" />
+				</ui:repeat>
 
+				</video>
+				
+				<script>
+					var player = videojs('video', {}, function() {
+					});
+				</script>
+			</h:panelGroup>
+			
 			<div>
 				<p:fileUpload label="Selecionar arquivo"
 							  value="#{uploadController.file}" mode="advanced" auto="true"
 							  fileUploadListener="#{uploadController.upload}" skinSimple="true"
-							  update="@form" onstart="PF('statusDialog').show()"
-							  oncomplete="PF('statusDialog').hide()" />
+							  update="@form" onstart="window.player.dispose(); PF('statusDialog').show()"
+							  oncomplete="PF('statusDialog').hide()" onerror=""/>
 			</div>
 
 		</h:form>
